fix: readability

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,13 +78,12 @@ a {
 }
 
 a:hover {
-  color: #ff00ff;
-  text-shadow: 0 0 10px rgba(255, 0, 255, 0.8);
+  text-shadow: 0 0 10px rgba(0, 191, 255, 0.8);
   text-decoration: none;
 }
 
 a:visited {
-  color: #ff69b4;
+  opacity: 0.7;
 }
 
 /* Lists */
